Fixed the preamble box going offscreen

--- a/solidVote/style.css
+++ b/solidVote/style.css
@@ -10,6 +10,9 @@ html {
 body {
   background-image: radial-gradient(circle at top left, #3a3a3a, #000000);
   height: 100%;
+}
+
+#mainUI {
   transform: translate(150px, 50px);
 }
 
@@ -116,6 +119,7 @@ a:active {
   font-size: 1.5em;
   padding: 10px;
   margin: 10px;
+  overflow: auto;
 }
 
 #preamble {
@@ -126,4 +130,6 @@ a:active {
   font-size: 1em;
   padding: 10px;
   margin: 30px;
+  overflow: auto;
+  display: inline-block;
 }
